examples/k8s/networkPolicies/networkpolicy-notype-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: no-policy-type-no-egress
spec:
  podSelector:
    matchLabels:
      role: demo
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.1.0/24
