examples/k8s/networkPolicies/networkpolicy-notype-noegress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: no-policy-type
spec:
  podSelector:
    matchLabels:
      role: demo
